# xpto

./: .zip.yaml  LOGGING.md  README.md  agent_schemas.json  agent_tracer.py  agents_human_feedback.py  analytics_assistant_agent.py  autogen_models.json  cleanup.sh  comm.sh  current_segment.json  find_restic.sh  git_add_filtered.sh  global_config.json  lint_and_test.sh  llm_cache.py  load_openai.py  logging_config.json  manifest.json  manifest_analysis.md  manifest_schema.json  manifest_update.json  multi_agent_feedback_example.md  multi_agent_human_feedback_toy_example.json  multi_agent_human_feedback_toy_example.py  pyproject.toml  requirements.txt  root_cause_analyzer.py  ruff_after_output.txt  ruff_fix_output.txt  ruff_output.txt  run_autogen_backup.sh  synthetic_users.json  synthetic_users_old.json  toy_example.json  toy_example.md  toy_example.py  update_manifest.json  update_manifest.py  update_manifest_config.json  (+3 more)
api/: api.py  main.py  openapi.yaml  requirements.txt
autogen_extensions/: auto_tracing_group_chat.py  base_agent.py  base_agent_cache.py  config_utils.py  execution_strategies_concrete.py  execution_strategy.py  intelligent_supervisor_overview.md  json_validation.py  llm_base_agent.py  llm_cache.py  llm_mock.py  log_utils.py  openai_utils.py  spawn_executor.py  spawn_join.py  structured_llm_base_agent.py  text_hashing.py  traced_group_chat.py  tracing.py  workflow_critic_agent.md  workflow_critic_agent.py
config/: README.md
docs/: agent_framework_architecture.md  agent_tracing.md  agents_human_feedback.md  api.md  architecture.md  architecture.puml  (+24 more)
(+151 files in other folders)
